--- a/main.html
+++ b/main.html
@@ -1,39 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>3-Sixty</title>
+    <title>3_Sixty Animation</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
-      html, body { margin: 0; padding: 0; overflow: hidden; }
+      body {
+        background-color: #000000;
+        margin: 0px;
+        overflow: hidden;
+      }
+
+      a {
+        color:#0078ff;
+      }
     </style>
   </head>
   <body>
-    <script src="js/three.min.js"></script>
+    <script src="js/three.js"></script>
+
+    <script src="js/controls/OrbitControls.js"></script>
+
+    <script src="js/renderers/Projector.js"></script>
+    <script src="js/renderers/CanvasRenderer.js"></script>
+
     <script>
-      var scene = new THREE.Scene();
 
-      var aspect = window.innerWidth / window.innerHeight;
+      var SEPARATION = 3, AMOUNTX = 2, AMOUNTY = 2, AMOUNTZ = 2;
 
-      var camera = new THREE.PerspectiveCamera( 75, aspect, 0.1, 1000 );
+      var container;
+      var camera, controls, scene, renderer;
 
-      var renderer = new THREE.WebGLRenderer();
-      renderer.setSize( window.innerWidth, window.innerHeight );
-      document.body.appendChild( renderer.domElement );
+      var particles, particle, count = 0;
 
-      var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-      var material = new THREE.MeshNormalMaterial();
-      var cube = new THREE.Mesh( geometry, material );
-      scene.add( cube );
-      camera.position.z = 5;
+      var windowHalfX = window.innerWidth / 2;
+      var windowHalfY = window.innerHeight / 2;
 
-      var render = function () {
-        requestAnimationFrame( render );
-        cube.rotation.x += 0.1;
-        cube.rotation.y += 0.1;
+      init();
+      animate();
+
+      function init() {
+
+        container = document.createElement( 'div' );
+        document.body.appendChild( container );
+
+        camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
+        camera.position.z = 1000;
+
+        controls = new THREE.OrbitControls( camera );
+
+        function render() {
+          requestAnimationFrame( render );
+          controls.update();
+          controls.enableDamping = true;
+          controls.dampingFactor = 0.25;
+          controls.enableZoom = false;
+        }
+
+        scene = new THREE.Scene();
+                
+        particles = new Array();
+
+        var PI2 = Math.PI * 2;
+        var material = new THREE.SpriteCanvasMaterial( {
+
+          color: 0xffffff,
+          program: function ( context ) {
+
+            context.beginPath();
+            context.arc( 0, 0, 0.5, 0, PI2, true );
+            context.fill();
+
+          }
+
+        } );
+
+        var i = 0;
+
+        for ( var ix = 0; ix < AMOUNTX; ix ++ ) {
+
+          for ( var iy = 0; iy < AMOUNTY; iy ++ ) {
+
+            for (var iz = 0; iz < AMOUNTZ; iz ++ ) {  
+
+              direction: Math.random() * 360, 
+              
+              particle = particles[ i ++ ] = new THREE.Sprite( material );
+              particle.position.x = ix * SEPARATION - ( ( AMOUNTX * SEPARATION ) / 2 );
+              particle.position.y = iy * SEPARATION - ( ( AMOUNTY * SEPARATION ) / 2 ); 
+              particle.position.z = iz * SEPARATION - ( ( AMOUNTZ * SEPARATION ) / 2 );
+              scene.add( particle );
+            }
+
+          }
+
+        }
+
+
+        renderer = new THREE.CanvasRenderer();
+        renderer.setPixelRatio( window.devicePixelRatio );
+        renderer.setSize( window.innerWidth, window.innerHeight );
+        container.appendChild( renderer.domElement );
+      }
+
+
+      function animate() {
+
+        requestAnimationFrame( animate );
+        render();
+      }
+
+      function render() {
+
+        var i = 0;
+
+        for ( var ix = 0; ix < AMOUNTX; ix ++ ) {
+
+          for ( var iy = 0; iy < AMOUNTY; iy ++ ) {
+
+            particle = particles[ i++ ];
+            particle.position.y = ( Math.sin( ( ix + count ) * 0.3 ) * 50 ) +
+              ( Math.sin( ( iy + count ) * 0.5 ) * 50 );
+            particle.scale.x = particle.scale.y = ( Math.sin( ( ix + count ) * 0.3 ) + 1 ) * 4 +
+              ( Math.sin( ( iy + count ) * 0.5 ) + 1 ) * 4;
+
+          }
+
+        }
+
         renderer.render( scene, camera );
-      };
 
-render();
+        count += 0.1;
 
+      }
 
     </script>
   </body>
