Remove needless variables

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="js/renderers/CanvasRenderer.js"></script>
 
     <script>
-     var parentz, parenty, parentx, renderer, scene, camera, controls, particle;
+     var renderer, scene, camera, controls, particle;
 
 var particles = []
 var speeds = []
