--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ var particles = []
 var speeds = []
 var meshs = []
 var PARTICLE_COUNT = 6;
+var tubeThickness = 0;
 
 init();
 animate();
@@ -54,12 +55,12 @@ function init() {
   camera.position.set(0, 0, 50);
 
   // controls
-  controls = new THREE.OrbitControls( camera );
-  controls.minDistance = 10;
-  controls.maxDistance = 100;
+  // controls = new THREE.OrbitControls( camera );
+  // controls.minDistance = 10;
+  // controls.maxDistance = 100;
 
   // axes
-  scene.add( new THREE.AxisHelper( 1 ));
+  // scene.add( new THREE.AxisHelper( 1 ));
 
   // empty each time we init (in case we change anything in the sliders)
   paths = []
@@ -145,8 +146,7 @@ function init() {
       speeds.push(speed)
     }   
 
-  }   
-
+  }
 
     function animate() {
       requestAnimationFrame( animate );
@@ -169,6 +169,21 @@ function init() {
     }
 
 
+    //dat gut
+    window.onload = function() {
+    var gui = new dat.GUI();
+
+    var cameraGui = gui.addFolder('Camera');
+      cameraGui.add(camera.position, 'x', -50,50).step(1);
+      cameraGui.add(camera.position, 'y', -50,50).step(1);
+      cameraGui.add(camera.position, 'z', 10,1000).step(1);
+      cameraGui.open();
+
+    var pathGui = gui.addFolder('Path Variables')
+      pathGui.add(tubeThickness.size, 'Tube Thickness', 0,1).step(1);
+      pathGui.open();
+
+    };
     </script>
   </body>
 </html>
